k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lms-portal-service
  namespace: lms-production
spec:
  type: NodePort                    # या LoadBalancer
  selector:
    app: lms-portal
  ports:
    - protocol: TCP
      port: 80                      # सर्विस का पोर्ट
      targetPort: 3000              # कंटेनर का पोर्ट
      nodePort: 30085               # ब्राउज़र में एक्सेस करने का पोर्ट
